# Simulations

./: LICENSE  README.md
cellular automata/conway/: .gitignore  CMakeLists.txt  README.md  main.cpp
